--- a/src/style.css
+++ b/src/style.css
@@ -32,19 +32,20 @@
   transition: transform 1s ease-in-out;
 
   svg {
+    scale: 2;
     animation: growRing 1.5s ease-in-out infinite;
   }
 }
 
 @keyframes growRing {
   0% {
-    transform: scale(.7);
+    transform: scale(1.5);
   }
   50% {
-    transform: scale(1);
+    transform: scale(2.2);
   }
   100% {
-    transform: scale(.7);
+    transform: scale(1.5);
   }
 }
 
